--- a/style.css
+++ b/style.css
@@ -12,14 +12,6 @@ body {
   background-image: url("/img/pk.png");
   background-size: 300px 300px;
   color: white;
-  text-align: center;
-}
-
-.overlay {
-  position: fixed;
-  width: 100%;
-  height: 100%;
-  padding: 0;
 }
 
 a:link {
@@ -42,17 +34,21 @@ a {
   color: white;
 }
 
+.main-container {
+  width: 100vw;
+  height: 100vh;
+}
+
 .main {
+  margin: 10vh auto;
+  padding: 0.5rem;
+  text-align: center;
+  max-width: 500px;
+  height: max-content;
   background-color: rgba(0, 0, 30, 0.6);
   border-radius: 20px;
+  border: 1px solid rgba(255, 255, 255, 0.3);
+
   -webkit-backdrop-filter: blur(2px);
   backdrop-filter: blur(2px);
-  position: absolute;
-  margin: auto;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  width: 500px;
-  height: max-content;
 }
